Idea reinstall